# spotify-to-telegram

./: .gitignore  LICENSE  LICENSE.md  README.md  babel.cfg  config.py  english.py  main.py  messages.pot  oldmain.py  pyproject.toml  requirements.txt  russian.py  setup.py
systemd/: README.md  spotifytotelegram.service
templates/: config.j2
translations/: README.md
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/ru/LC_MESSAGES/: messages.mo  messages.po
